--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,10 @@
   box-sizing: border-box;
 }
 
+:root {
+  background-color: white !important;
+}
+
 /* Main Header */
 .header {
   background-color: white;
@@ -18,9 +22,8 @@
 
 .headSection {
   display: flex;
-  justify-content: start;
   align-items: center;
-  padding: 0% 3em;
+  padding: 0 2rem;
 }
 .headSection .anticon {
   border: none;
@@ -93,6 +96,29 @@
   border: 3px solid orangered;
 }
 
+.pop-img {
+  height: 3em;
+  width: 3em;
+  border-radius: 50%;
+  border: 3px solid orangered;
+}
+
+.popoverContent-data {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.8em;
+  border-radius: 10px;
+  gap: 1em;
+}
+
+.devider {
+  height: 2px;
+  width: 100%;
+  background-color: rgba(191, 191, 192, 0.804);
+  margin: 1em 0;
+}
+
 .Doc > span {
   padding: 0.6em 1em;
   background-color: #f87060; /* Added semicolon */
@@ -101,4 +127,60 @@
   color: white;
 }
 
-/* Sidebar (Sider) *//*# sourceMappingURL=App.css.map */
+.sideBar {
+  height: 100vh;
+  width: 5000px;
+  position: sticky;
+  background-color: aquamarine;
+  left: 0;
+  top: 0;
+}
+
+.ant-layout-sider-trigger {
+  display: none;
+}
+
+.ant-menu-item {
+  /* Base styles for the menu item */
+  color: rgb(72, 69, 69) !important;
+  /* Styles for focus and active states */
+  /* Pseudo-element for the dot on the left side when active */
+}
+.ant-menu-item:focus, .ant-menu-item:active {
+  background-color: rgba(248, 111, 96, 0.1607843137) !important;
+  border-radius: 34px;
+  color: #f87060 !important;
+}
+.ant-menu-item:focus::before, .ant-menu-item:active::before {
+  content: "";
+  display: block;
+  width: 0.5em; /* Adjust the width of the dot */
+  height: 2em; /* Adjust the height of the dot */
+  background-color: #f87060; /* Set the dot color */
+  border-radius: 34px; /* Make the dot circular */
+  position: absolute;
+  left: 0.5em; /* Adjust the dot position from the left */
+  top: 50%; /* Center the dot vertically */
+  transform: translateY(-50%); /* Adjust the vertical alignment */
+}
+
+.content-Section {
+  background-image: url("./assets/Vector.png");
+  background-color: rgb(255, 253, 253);
+  padding: 1em;
+  background-size: cover; /* Ensure the image covers the entire element */
+  background-repeat: no-repeat; /* Prevent the image from repeating */
+  background-position: center; /* Center the image */
+  width: 100%;
+  height: 115dvh;
+  gap: 1em;
+}
+
+.customer-sec {
+  margin-top: 10px;
+  padding: 0.8em;
+}
+.customer-sec h1 {
+  color: rgba(77, 71, 71, 0.874);
+  font-weight: 600;
+}/*# sourceMappingURL=App.css.map */
