icon color fixed

--- a/src/App.css
+++ b/src/App.css
@@ -166,7 +166,7 @@
 
 .content-Section {
   background-image: url("./assets/Vector.png");
-  background-color: rgb(255, 253, 253);
+  background-color: rgba(240, 216, 213, 0.0666666667);
   padding: 1em;
   background-size: cover; /* Ensure the image covers the entire element */
   background-repeat: no-repeat; /* Prevent the image from repeating */
@@ -183,16 +183,21 @@
   color: rgba(77, 71, 71, 0.874);
   font-weight: 600;
   font-size: 2rem;
+  margin-bottom: 1em;
 }
 .customer-sec .customerDataSection {
-  box-shadow: 0px 18px 13px -4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 10px 13px 10px rgba(0, 0, 0, 0.1);
   width: 80vw;
+  padding: 1em;
   position: absolute;
+  background-color: white;
+  border-radius: 0.8em;
 }
 .customer-sec .customerDataSection .InputText {
   color: #f87060;
   border: 1px solid #f87060;
   outline: none;
+  margin-bottom: 0.8em;
   border-radius: 8px;
   background-color: transparent;
   padding: 0.8em 1em;
@@ -227,4 +232,10 @@
 
 .status-uncompleted {
   color: rgb(249, 5, 5);
+}
+
+.fa-icon {
+  border-color: #f87060;
+  margin-right: 0.8em;
+  color: #f87060;
 }/*# sourceMappingURL=App.css.map */
