--- a/src/App.css
+++ b/src/App.css
@@ -235,7 +235,16 @@
 }
 
 .fa-icon {
+  border: none;
   border-color: #f87060;
   margin-right: 0.8em;
   color: #f87060;
+}
+.fa-icon:hover, .fa-icon:active {
+  border: 1px solid #f87060;
+}
+
+.searchIcon {
+  color: #f87060;
+  transform: translate(1.5em);
 }/*# sourceMappingURL=App.css.map */
