search icon added

--- a/src/App.css
+++ b/src/App.css
@@ -247,4 +247,8 @@
 .searchIcon {
   color: #f87060;
   transform: translate(1.5em);
+}
+
+.searchIconActive {
+  display: none;
 }/*# sourceMappingURL=App.css.map */
