--- a/src/App.css
+++ b/src/App.css
@@ -178,10 +178,14 @@
 
 .customer-sec {
   padding: 0.8em;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 .customer-sec h1 {
   color: rgba(77, 71, 71, 0.874);
   font-weight: 600;
+  align-self: flex-start;
   font-size: 2rem;
   margin-bottom: 1em;
 }
@@ -189,7 +193,6 @@
   box-shadow: 0px 10px 13px 10px rgba(0, 0, 0, 0.1);
   width: 80vw;
   padding: 1em;
-  position: absolute;
   background-color: white;
   border-radius: 0.8em;
 }
