--- a/src/App.scss
+++ b/src/App.scss
@@ -185,10 +185,14 @@
 
 .customer-sec {
   padding: 0.8em;
+  display: flex;
+ align-items: center;
+  flex-direction: column;
 
   h1 {
     color: rgba(77, 71, 71, 0.874);
     font-weight: 600;
+align-self: flex-start;
     font-size: 2rem;
     margin-bottom: 1em;
   }
@@ -197,7 +201,6 @@
     box-shadow: 0px 10px 13px 10px rgba(0, 0, 0, 0.1);
     width: 80vw;
     padding: 1em;
-    position: absolute;
     background-color: white;
     border-radius: 0.8em;
     .InputText {
@@ -208,10 +211,9 @@
       border-radius: 8px;
       background-color: transparent;
       padding: 0.8em 1em;
-    
+
       &::placeholder {
         color: #f87060;
-
       }
     }
   }
@@ -234,13 +236,13 @@
 }
 
 .status-progress {
- color: orange ;
+  color: orange;
 }
 
 .status-uncompleted {
   color: rgb(249, 5, 5);
 }
-.fa-icon{
+.fa-icon {
   border: none;
   border-color: #f87060;
   margin-right: 0.8em;
@@ -248,12 +250,11 @@
 
   &:hover,
   &:active {
-      border: 1px solid #f87060;
+    border: 1px solid #f87060;
   }
-
 }
 
-.searchIcon{
+.searchIcon {
   color: #f87060;
   transform: translate(1.5em);
 }
